# is-odd

./: Cargo.toml  README.md
.github/workflows/: CI.yml  release.yml
src/: lib.rs
tests/: tests.rs
